blurry background fix media queries

--- a/index.css
+++ b/index.css
@@ -22,7 +22,7 @@ body {
   color: white;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 400px) {
   body {
     background-attachment: scroll;
   }
